# news-analyzer

./: .gitignore  DockerFile  README.md  debug.py  main.py  pyproject.toml  requirements.txt  vercel.json
static/: index.html  script.js  style.css
